IDE setup updated and extended